--- a/src/app/modules/appointament/pages/appointment-list/appointment-list.component.html
+++ b/src/app/modules/appointament/pages/appointment-list/appointment-list.component.html
@@ -32,7 +32,7 @@
   <app-appointment-table-list
     [dataSource]="dataSource"
     [displayedColumns]="displayedColumns"
+    [isDataLoading]="isDataLoading"
     (deleteItem)="onDeleteItem($event)"
   ></app-appointment-table-list>
 </p-card>
-
