--- a/src/app/shared/components/layout/main-layout/main-layout.component.scss
+++ b/src/app/shared/components/layout/main-layout/main-layout.component.scss
@@ -8,7 +8,7 @@
 .layout-sidebar {
   flex-shrink: 0;
   width: 250px;
-  background: #1e293b;
+  background: #fff;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
   z-index: 1000;
 
