--- a/src/app/styles/material/base/_reset.scss
+++ b/src/app/styles/material/base/_reset.scss
@@ -45,6 +45,10 @@ body {
 /* Fonte e anti-aliasing */
 body {
   font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: normal;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   line-height: 1.5;
