--- a/src/app/shared/components/shared-header/shared-header.component.html
+++ b/src/app/shared/components/shared-header/shared-header.component.html
@@ -1,18 +1,24 @@
-<p-card class="mb-5">
+<p-card class="shared-header mb-3 display-block">
   <div class="grid align-items-center">
     <div class="col-12">
-      <div class="flex align-items-center gap-5">
-        <p-button
-          *ngIf="viewLink"
-          icon="pi pi-arrow-left"
-          severity="secondary"
-          [text]="true"
-          (onClick)="viewLink()"
-          aria-label="viewlink"
-        ></p-button>
-        <div>
-          <h2 class="m-0 font-bold">{{ title() }}</h2>
-          <p class="mt-1 text-color-secondary">{{ subtitle() }}</p>
+      <div class="flex align-items-center justify-content-between __titles">
+        <div class="flex align-items-center gap-5">
+          <p-button
+            *ngIf="viewLink"
+            icon="pi pi-arrow-left"
+            severity="secondary"
+            [text]="true"
+            (onClick)="viewLink()"
+            aria-label="viewlink"
+          ></p-button>
+          <div>
+            <h2 class="mb-2 font-bold">{{ title() }}</h2>
+            <p class="mt-1 text-color-secondary">{{ subtitle() }}</p>
+          </div>
+        </div>
+
+        <div class="flex align-items-center">
+          <app-breadcrumb />
         </div>
       </div>
     </div>
