--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 @import "primeicons/primeicons.css";
 @import "primeflex/primeflex.css";
 
@@ -8,6 +7,11 @@ body {
 }
 body {
   font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 0.9rem;
+  font-variation-settings: "wdth" 100;
   background-color: var(--surface-ground);
   margin: 0;
   color: var(--text-color);
