--- a/src/app/modules/dashboard/pages/dashboard-edit/dashboard-edit.component.html
+++ b/src/app/modules/dashboard/pages/dashboard-edit/dashboard-edit.component.html
@@ -1,4 +1,7 @@
-<app-shared-header [viewLink]="back"></app-shared-header>
+<app-shared-header
+  [showBackButton]="true"
+  [backAction]="back"
+></app-shared-header>
 
 <p-card styleClass="mt-3">
   <ng-template pTemplate="header">
@@ -133,4 +136,3 @@
     </div>
   </form>
 </p-card>
-
